--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^14.2.22",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.32.0",
     "zustand": "^5.0.3"
