--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@ai-sdk/openai": "^1.0.13",
     "@ai-sdk/provider-utils": "^1.0.21",
     "@deepgram/sdk": "^3.6.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.12",
     "ai": "^3.3.20",
     "browser-image-compression": "^2.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.3.31",
@@ -28,6 +33,7 @@
     "react-hot-toast": "^2.5.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.32.0",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
