--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.469.0",
     "nanoid": "^3.3.8",
     "next": "^14.2.22",
+    "openai": "^4.78.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.1",
