--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,9 +1,10 @@
-fastapi
-langchain
-langchain-openai
-python-dotenv
-uvicorn
-starlette
-pydantic>=2.0.0
-python-multipart
-aiohttp
+fastapi==0.109.2
+uvicorn==0.27.1
+python-dotenv==1.0.1
+openai==1.12.0
+langchain==0.1.9
+langchain-openai==0.0.7
+langchain-pinecone==0.0.3
+pinecone-client==3.0.2
+supabase>=0.7.1
+langchain-community>=0.0.1
