--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.12",
+    "@types/prismjs": "^1.26.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^3.3.20",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
@@ -26,19 +28,28 @@
     "date-fns": "^3.6.0",
     "emoji-picker-react": "^4.12.0",
     "framer-motion": "^11.3.31",
+    "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.469.0",
     "nanoid": "^3.3.8",
     "next": "^14.2.22",
     "openai": "^4.78.1",
+    "prism-react-renderer": "^2.4.1",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.1",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "replicate": "^0.32.0",
     "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
