--- a/.env.sample
+++ b/.env.sample
@@ -2,11 +2,24 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 OPENAI_API_KEY=your_openai_api_key
-
 LANGCHAIN_API_KEY=your_langchain_api_key
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_PROJECT=ChatGeniusAI
 
+API_URL=my_api_url
+
 PINECONE_API_KEY=your_pinecone_api_key
 PINECONE_INDEX_NAME=chat-genius-ai
 PINECONE_ENVIRONMENT=your_pinecone_environment
+
+# Database
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=postgres
+
+# Supabase
+SUPABASE_URL=supabase_url
+STUDIO_PG_META_URL=studio_pg_meta_url
+
+# ElevenLabs
+ELEVENLABS_API_KEY=elevenlabs_api_key
