--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ai-sdk/openai": "^1.0.13",
     "@ai-sdk/provider-utils": "^1.0.21",
     "@deepgram/sdk": "^3.6.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
